k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vpnaas
  labels:
    name: vpnaas
    app: vpnaas
